--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,6 @@
 body {
  /* background-color: lightgray; */
- background: url(https://images.unsplash.com/photo-1529362487499-b149087a4f62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+ background: url(https://images.unsplash.com/photo-1525018923-1ebe8261a6a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
@@ -15,5 +15,19 @@ ul {
 
 h2 {
  padding-bottom: 2rem;
- padding-top: 2rem;
+ padding-top: 4rem;
+ text-align: left;
+ font-style: oblique;
 }
+
+header {
+
+    top: 5px;
+    left: 100px;
+    right: 80px;
+    height: 80px;
+  }
+
+  input{
+    width: 50%;
+  }
