--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,4 @@
 body {
- /* background-color: lightgray; */
  background: url(https://images.unsplash.com/photo-1525018923-1ebe8261a6a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60);
  background-position: center;
  background-repeat: no-repeat;
@@ -9,25 +8,30 @@ body {
  padding: 0;
  font-family: 'Helvetica Neue', sans-serif;
 }
+
 ul {
  list-style-type: none;
 }
 
 h2 {
  padding-bottom: 2rem;
- padding-top: 4rem;
+ padding-top: 120px;
  text-align: left;
  font-style: oblique;
 }
 
 header {
+  top: 5px;
+  left: 100px;
+  right: 80px;  
+}
 
-    top: 5px;
-    left: 100px;
-    right: 80px;
-    height: 80px;
-  }
+input {
+  width: 50%;
+}
 
-  input{
-    width: 50%;
-  }
+.navbar {
+  height: 70px;
+  background-color: #f13279;
+  width: 100%;
+}
