--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,13 +1,14 @@
 body {
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
+  background: url('https://images.unsplash.com/photo-1471877325906-aee7c2240b5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
   /* background: url('https://images.unsplash.com/photo-1535478044878-3ed83d5456ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60'); */
   /* background: url(https://images.unsplash.com/photo-1525018923-1ebe8261a6a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
-  /* background-position: center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
   margin: 0;
-  padding: 0; */
+  padding: 0;
   font-family: 'Helvetica Neue', sans-serif;
 }
 
@@ -20,10 +21,16 @@ h2 {
   padding-top: 120px;
   text-align: center;
   color: black;
-  font-family: Arial Black;
+  font-family: 'Oswald', sans-serif;
   /* font-style: oblique; */
 }
 
+h3 {
+  text-align: center;
+  color: black;
+  font-family: 'Oswald', sans-serif;
+  /* font-style: oblique; */
+}
 header {
   top: 10px;
   left: 100px;
@@ -85,17 +92,27 @@ form {
   padding-left: 1em;
 }
 
+.pink-letters {
+  color: #f13279;
+}
+
+.lightgrey-letters {
+  color: lightgrey;
+}
 .eventTitle {
   color: #f13279;
 }
 
-.event-back-block {
-  background-color: lightgrey;
+/* .event-back-block { */
+.transparent {
+  background-color: rgba(211, 211, 211, 0.6) !important ;
+  /* } */
+  /* background-color: lightgrey; */
 }
 
-.vid-head-back-block {
+/* .vid-head-back-block {
   background-color: lightgrey;
-}
+} */
 .video-header {
   text-align: center;
   padding-top: 1em;
@@ -108,7 +125,8 @@ form {
 }
 
 .video-back-block {
-  background-color: #f13279;
+  /* background-color: f13279#; */
+  background-color: rgba(241, 50, 121, 0.7) !important;
   padding-right: 1em;
   padding-top: 3rem;
   margin-top: 0;
@@ -117,6 +135,8 @@ form {
 #rcorners-evt-block {
   border-radius: 25px;
   background: lightgrey;
+  border-color: black;
+  border: 10px;
 }
 
 #rcorners-vid-head {
