--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,5 @@
 body {
-  /* background-color: lightgrey; */
   background: url('https://images.unsplash.com/photo-1471877325906-aee7c2240b5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
-  /* background: url('https://images.unsplash.com/photo-1535478044878-3ed83d5456ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60'); */
-  /* background: url(https://images.unsplash.com/photo-1525018923-1ebe8261a6a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -47,22 +44,17 @@ input {
   background-color: black;
   width: 100%;
   padding: 15px;
-  /* color: whitesmoke; */
 }
 .navbar-nav {
   padding-left: 20px;
 }
 
 .brandNameFirstLetter {
-  /* color: #ad2375; */
-  /* rgb(140, 201, 90); */
   color: #f13279;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 39pt;
 }
 #brandNameFirstWord {
-  /* color: #ad2375; */
-  /* rgb(140, 201, 90); */
   color: #f13279;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 36pt;
@@ -79,14 +71,10 @@ input {
 }
 
 .fa-home {
-  /* color: rgb(181, 37, 122); */
-  /* rgb(140, 201, 90); */
   color: #f13279;
 }
 
 .fa-question {
-  /* color: rgb(181, 37, 122); */
-  /* rgb(140, 201, 90); */
   color: #f13279;
 }
 
@@ -96,16 +84,12 @@ form {
 }
 
 .nav-item {
-  /* color: rgb(181, 37, 122); */
-  /* rgb(140, 201, 90); */
   color: #f13279;
   font-size: 28px;
   padding-left: 1em;
 }
 
 .pink-letters {
-  /* color: rgb(181, 37, 122); */
-  /* rgb(140, 201, 90); */
   color: #f13279;
 }
 
@@ -113,17 +97,12 @@ form {
   color: lightgrey;
 }
 .eventTitle {
-  color: #ad2375;
-  /* rgb(140, 201, 90); */
-  /* color: #f13279; */
+  color: #bf227f;
 }
 
 /* .event-back-block { */
 .transparent {
   background-color: rgb(255, 255, 255, 0.5) !important;
-  /* rgba(211, 211, 211, 0.6) !important ; */
-  /* } */
-  /* background-color: lightgrey; */
 }
 
 /* .vid-head-back-block {
@@ -141,9 +120,6 @@ form {
 }
 
 .video-back-block {
-  /* background-color: f13279#; */
-  /* background-color: rgb(181, 37, 122, 0.7) !important; */
-  /* rgb(140, 201, 90, 0.7) !important; */
   background-color: rgba(241, 50, 121, 0.7) !important;
   padding-right: 1em;
   padding-top: 3rem;
@@ -161,7 +137,6 @@ form {
 #rcorners-vid-head {
   border-radius: 25px 25px 0px 0px;
   background: rgb(255, 255, 255);
-  /* lightgrey; */
 }
 
 #rcorners-vid-list-block {
